Added a kotlin port for multi option editor, a lot of stuff